syntax = "proto3";

package minerserver.api.v1;

option go_package = "uminer/miner_server/chipApi;chipApi";


service ChipService {
  rpc ListAllChips (ListChipsRequest) returns (ListChipsReply);

}


message ChipItem {
  string devId = 1;
  string busId = 2;
  string memory = 3;
  string tpuuti = 4;
  string boardT = 5;
  string chipT = 6;
  string tpuT = 7;
  string tpuV = 8;
  string tpuC = 9;
  string currclk = 10;
  string status = 11;
}

message CardItem {
  string CardID = 1;
  string mame = 2;
  string mode = 3;
  string serialNum = 4;
  string atx = 5;
  string maxP = 6;
  string boardP = 7;
  string minclk = 8;
  string maxclk = 9;
  repeated ChipItem chips = 10;
}


message ListChipsRequest {
  uint32 devId = 1;
}

message ListChipsReply {
  int64 totalSize = 1;
  repeated CardItem cards = 2;
}


